修改foot和产品文字居中

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -58,6 +58,26 @@
         <dd><strong>电 话：</strong> <span th:text="*{mobilePhone}"/>&nbsp;&nbsp;&nbsp;<span th:text="*{fixedLinePhone}"/></dd>
         <dd><strong>邮 箱：</strong> <span th:text="*{email}"> </span></dd>
     </div>
+    <h3>联系我们</h3>
+    <div>
+        <form action="" class="am-form">
+            <fieldset>
+                <div class="am-form-group">
+                    <label for="doc-vld-username">您的名字：</label>
+                    <input type="text" id="doc-vld-username" name="username" minlength="3" placeholder="输入用户名" class="am-form-field" required/>
+                </div>
+                <div class="am-form-group">
+                    <label for="doc-vld-phone">您的电话：</label>
+                    <input type="text" id="doc-vld-phone" name="phone" minlength="3" placeholder="输入电话" class="am-form-field" required/>
+                </div>
+                <div class="am-form-group">
+                    <label for="doc-vld-question">问题：</label>
+                    <input type="text" id="doc-vld-question" name="question" minlength="3" placeholder="输入问题描述" class="am-form-field" required/>
+                </div>
+            </fieldset>
+            <button class="am-btn am-btn-secondary" type="submit" style="float:right ">提交</button>
+        </form>
+    </div>
 </div>
 <div th:replace="footer::navbar"></div>
 
