--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -30,7 +30,16 @@
 
     <link rel="stylesheet" href="/assets/css/amazeui.min.css"/>
     <link rel="stylesheet" href="/assets/css/app.css"/>
-
+  <!--百度商桥代码-->
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?1500559a42fcb627f74e6a2234083ae2";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </head>
 
 
