--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -121,6 +121,7 @@
         success: function (result) {
           if (result == "success") {
             alert("提交成功");
+            location.reload(true);
           }
         }
       });
