--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -44,6 +44,10 @@
           color: #727272;
           padding-left: 8px;
         }
+        .am-form .am-form-group input{
+        font-size: 15px;
+        font-family: "Segoe UI","Lucida Grande",Helvetica,Arial,"Microsoft YaHei",FreeSans,Arimo,"Droid Sans","wenquanyi micro hei","Hiragino Sans GB","Hiragino Sans GB W3",FontAwesome,sans-serif;
+      }
     </style>
 </head>
 
