--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -59,36 +59,41 @@
 <div class="am-u-sm-11 aboutus am-margin-top-lg am-u-sm-centered ">
     <div class="zmn-center am-margin-top  zmn_title ">联系我们</div>
     <div class="zmn-center zmn_title1"> CONTACT US</div>
-
-    <h3>联系方式</h3>
-    <hr/>
-    <div class="am-g contact_text" th:object="${contact}">
-        <dd><strong>地 址：</strong> <span th:text="*{address}"></span></dd>
-        <dd><strong>电 话：</strong> <span th:text="*{mobilePhone}"/>&nbsp;&nbsp;&nbsp;<span th:text="*{fixedLinePhone}"/></dd>
-        <dd><strong>邮 箱：</strong> <span th:text="*{email}"> </span></dd>
-    </div>
-
-    <h3 class="contact_text2">联系我们</h3>
-    <hr />
-    <div>
+    <div style="margin-top: 30px">
       <form action="" class="am-form">
         <fieldset style="padding-left: 0px;padding-top: 0px">
           <div class="am-form-group">
-            <label for="doc-vld-username">您的名字：</label>
-            <input type="text" id="doc-vld-username" name="username" minlength="3" placeholder="输入用户名" class="am-form-field" required/>
+
+            <input type="text" id="doc-vld-username" name="username" minlength="3" placeholder="输入用户名" class="am-form-field am-radius" required/>
           </div>
           <div class="am-form-group">
-            <label for="doc-vld-phone">您的电话：</label>
-            <input type="text" id="doc-vld-phone" name="phone" minlength="3" placeholder="输入电话" class="am-form-field" required/>
+
+            <input type="text" id="doc-vld-phone" name="phone" minlength="3" placeholder="输入电话" class="am-form-field am-radius" required/>
           </div>
+         <!-- <div class="am-form-group">
+
+            <input type="text" id="doc-vld-question" name="question" minlength="3" placeholder="输入留言" class="am-form-field" />
+          </div>-->
           <div class="am-form-group">
-            <label for="doc-vld-question">问题：</label>
-            <input type="text" id="doc-vld-question" name="question" minlength="3" placeholder="输入问题描述" class="am-form-field" />
+            <textarea class="" rows="5" id="doc-ta-1" placeholder="留下联系电话及您的问题,稍后我们将联系到您"></textarea>
           </div>
+          <button id="submitForm" class="am-btn am-btn-default am-radius" type="submit" style="float:left" >提交</button>
         </fieldset>
-        <button id="submitForm" class="am-btn am-btn-secondary" type="submit" style="float:right" >提交</button>
       </form>
     </div>
+
+    <div style="">
+      <h3 style="font-size: 18px;color: #000;margin-bottom: 5px">联系方式</h3>
+      <hr style="margin: 5px 0px"/>
+      <div class="am-g contact_text" th:object="${contact}">
+          <dd><strong>地 址：</strong> <span th:text="*{address}"></span></dd>
+          <dd><strong>电 话：</strong> <span th:text="*{mobilePhone}"/>&nbsp;&nbsp;&nbsp;<span th:text="*{fixedLinePhone}"/></dd>
+          <dd><strong>邮 箱：</strong> <span th:text="*{email}"> </span></dd>
+      </div>
+    </div>
+
+
+
 </div>
 <div th:replace="footer::navbar"></div>
 
