--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -31,6 +31,16 @@
     <link rel="stylesheet" href="/assets/css/amazeui.min.css"/>
     <link rel="stylesheet" href="/assets/css/app.css"/>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=scm1FPgepM119j6ECfmLtPLIE2ZnA1A4"></script>
+    <!--百度商桥代码-->
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?633b2b542b9cd7c156ec0853c31147b7";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
     <style>
         .contact_text {
             line-height: 25px;
