--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -41,7 +41,7 @@
 <div data-am-widget="navbar" th:fragment="navbar" id="footnavbar" class="am-navbar am-cf am-navbar-default" style="margin-bottom: 5px">
     <ul class="am-navbar-nav am-cf am-avg-sm-4 footer_color" style="border-top: 1px solid #f0f0f0;background-color: #fff">
         <li >
-            <a th:href="@{'sms:'+${contact.getMobilePhone()}+'?body&#x3D;你好？'}" class="">
+            <a href="/contact" class="">
                 <!--<img id="icon_1"  src="/icon/message.png" style="width: 23px;display: inline-block;" />-->
                 <i style="background: url(/icon/icon.png) no-repeat -102px -54px;background-size: 630%;display: inline-block;width: 30px;height: 30px;"></i>
                 <span class="am-navbar-label" style="color: #555555;">消息</span>
