修改index样式，底部添加阴影

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -78,7 +78,7 @@
         <fieldset style="padding-left: 0px;padding-top: 0px">
           <div class="am-form-group">
 
-            <input type="text" id="doc-vld-username" name="username" minlength="3" placeholder="输入用户名" class="am-form-field am-radius" required/>
+            <input type="text" id="doc-vld-username" name="username" minlength="3" placeholder="输入您的姓名" class="am-form-field am-radius" required/>
           </div>
           <div class="am-form-group">
 
