--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -34,11 +34,10 @@
 
     <link rel="stylesheet" href="/assets/css/amazeui.min.css"/>
     <link rel="stylesheet" href="/assets/css/app.css"/>
-
-</head>
+</head>x`
 
 <body>
-<div data-am-widget="navbar" th:fragment="navbar" id="footnavbar" class="am-navbar am-cf am-navbar-default" style="margin-bottom: 5px">
+<div data-am-widget="navbar" th:fragment="navbar" id="footnavbar" class="am-navbar am-cf am-navbar-default" style="margin-bottom: 5px; box-shadow: 0px -3px 5px rgba(136, 136, 136, 0.12);">
     <ul class="am-navbar-nav am-cf am-avg-sm-4 footer_color" style="border-top: 1px solid #f0f0f0;background-color: #fff">
         <li >
             <a href="/contact" class="">
