修改index样式，底部添加阴影

--- a/src/main/resources/templates/windenergy/aboutus.html
+++ b/src/main/resources/templates/windenergy/aboutus.html
@@ -3,13 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <!--移动优先-->
-    <title>光合硅能蓄电池唯一【官网】|光合硅能电池公司官网|光合硅能蓄电池厂家</title>
-    <meta name="keywords" content="光合硅能蓄电池,硅能蓄电池,硅能电池,光合硅能电池官网,光合硅能电池,光合硅能蓄电池官网,光合硅能,
-  ,太阳能储能电池,光合硅能电池官网,蓄电池厂家,发电系统,湖南前沿,前沿科技"/>
-    <meta name="description"
-        content="光合硅能一直坚持以品质，足容量，不虚标，不作假，承诺的售后质保服务为坚持，目前在行业内具有一定的品牌价值，请一定认准可以提供商标品牌查询资质的正规购买渠道。买光合硅能蓄电池请认准天猫旗舰店和湖南前沿科技官网网址www.150ah.com，有蓝标和工商认证为正品。认准光合硅能，有工商执照认证，有百度信誉认证才是正品。联系电话：17773166613"/>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1"/>
+    <title>风力发电机-永动新能源有限公司</title>
+    <meta name="keywords" content="小型风力发电机,风光互补路灯系统,太阳能发电系统,家用太阳能发电系统,光伏发电系统,风力发电机,风力发电机厂家,风力发电机价格,小型风力发电机,中小型风力发电机,中型风力发电机,湖南前沿科技,风光互补系统,发电系统,水平轴风力发电机,垂直轴风力发电机" />
+    <meta name="description" content="永动新能源有限公司主要产品有100W-100kW水平轴风力发电机、垂直轴风力发电机等中小型风力发电机、风光互补路灯、风光互补分布式发电系统、太阳能灯路灯等，可为客户提供风力发电、风光互补发电、风光互补路灯，太阳能路灯系统、 太阳能光伏提水系统及光伏并网发电等一站式解决方案，电话:17773166613" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit"/>
 
@@ -56,8 +53,7 @@
 
 
 <body>
-<div th:replace="header::menu"></div>
-
+<div th:replace="windenergy/header::windmenu"></div>
 
 <div class="am-u-sm-11 aboutus am-margin-top-lg am-u-sm-centered ">
     <div class="zmn-center am-margin-top  zmn_title ">关于我们</div>
@@ -79,6 +75,7 @@
 
 </div>
 
+
 <div class="am-g about_img">
     <div th:each="aboutimg:${aboutimgs}">
         <img class="about_img"
@@ -87,10 +84,8 @@
 </div>
 
 
-
-
 </div>
-<div th:replace="footer::navbar"></div>
+<div th:replace="windenergy/footer::windnavbar"></div>
 
 <!--在这里编写你的代码-->
 
